--- a/_posts/2000-01-01-intro.md
+++ b/_posts/2000-01-01-intro.md
@@ -2,59 +2,18 @@
 title: "home"
 bg: white
 color: black
-style: center
 ---
 
-# Elevator Pitch (Short Version)
+# <b>Muhammad H. Khan</b>
 
-I am an incoming Ph. D. student at Yale University in biomedical engineering
+## Elevator Pitch
+
+<div class="mhkphoto" style="height:30%"><img src="../img/hardlyworking.png" /></div>
+
+I am an incoming Ph. D. student at [Yale University](http://www.yale.edu) in biomedical engineering
 with quite an eclectic variety of interests. My passions for computational
 modeling, physics, and quantitative approaches to the life sciences have made
 me explore the areas of biomedical imaging, with which my Ph. D. thesis will
-most likely be concerned.
-
-# About Me (Long Version)
-
-I'm a bit of an eccentric individual whose favorite thing to do, above all, is
-learn. I'm pretty much the biggest STEM junkie you will possibly ever find,
-and by that I mean a junkie in all 4 of the fields encompassed by the acronym.
-I received both my Bachelors of Science ('15) and Masters of Engineering ('16)
-from Cornell University, the former in both chemical engineering and computer
-science, and the latter in biomedical engineering. I am about to embark upon a
-Ph. D. also in biomedical engineering starting August 2016 at Yale University,
-with a potential project involving computational biomedical imaging/medical
-physics.
-
-I like to, however, have personal interests that span a variety of fields. If
-I had it my way, I would be able to study all of my interests at the same time.
-Here is a list of things you could probably have a healthy conversation with
-me about:
-
-* Mathematics
-  - Measure Theorey
-  - Analytical Calculus/Differential Geometry
-  - Abstract Algebra
-* Physics
-  - Quantum Mechanics/Quantum Mechanical Formulations
-  - Langragian Mechanics
-  - Solid-State/Condensed Matter Physics
-  - General Relativity
-  - (Super-)String Theory
-* Chemistry
-  - Physical Chemistry
-  - Molecular Dynamics
-  - Molecular Orbital Theory
-  - Statistical Thermodynamics
-* Biology
-  - Molecular and Systems Biology
-  - Genomics and Computational Biology
-  - Biochemistry
-  - Stem Cell Engineering
-* Computer Science
-  - Multi-Paradigm Programming
-  - Programming Language Theory (Type Theory)
-  - (Typed) Lambda Calculus
-  - Algorithm Design and Analysis
-
-..and the list goes on. If you know something about any of those, or something
-else entirely, feel free to reach out.
+most likely be concerned. I'm also a music enthusiast and really good at
+memorizing song lyrics so you'll most likely find me walking and singing
+something from the Top 40 / Billboard Hot 100 more often than not.
