--- a/_posts/2000-01-03-projects.md
+++ b/_posts/2000-01-03-projects.md
@@ -8,7 +8,8 @@ fa-icon: terminal
 # Projects
 
 {% highlight bash linenos=table %}
-let today = new Opportunity();
+typedef potential Opportunity;
+Opportunity today = new Ideas();
 {% endhighlight %}
 
 These are all projects I have undertaken at my leisure, and can all be found
