--- a/_posts/2000-01-02-aboutme.md
+++ b/_posts/2000-01-02-aboutme.md
@@ -29,7 +29,7 @@ I had it my way, I would be able to study all of my interests at the same time. 
 addition to the core concepts of my field, you'll often find me reading up on the
 nitty gritty of quantum field theory in physics, the Curry-Howard isomorphism in
 formal language type theory, or anything new in the exciting field of stem cell
-engineering (to name a few). It's especially exciting when I find something that
+engineering (to name a stark few). It's especially exciting when I find something that
 combines two seemingly different topics; one of my favorites is Karp's application
 of mathematical group theory to nucleotide sequences ([here]({{ site.url }}/docs/group_theory_DNA.pdf)).
 {% comment %}
