line break issue

--- a/_posts/2000-01-03-projects.md
+++ b/_posts/2000-01-03-projects.md
@@ -8,8 +8,7 @@ fa-icon: terminal
 # Projects
 
 {% highlight bash linenos=table %}
-typedef potential Opportunity;
-Opportunity today = new Ideas();
+let today = new Ideas();
 {% endhighlight %}
 
 These are all projects I have undertaken at my leisure, and can all be found
