added hackathon stuff and updated resume

--- a/_posts/2000-01-03-projects.md
+++ b/_posts/2000-01-03-projects.md
@@ -14,6 +14,8 @@ let today = new Ideas();
 These are all projects I have undertaken at my leisure, and can all be found
 hosted on my [GitHub](https://github.com/muhammadkhan). Notable ones include:
 
+* [**Biomimetic Approach to Computer-Aided Diagnosis For Lung Cancer**]({{ site.url }}/docs/DeepEyeHackathonPresentation.pdf): Development of a deep learning-based eye-tracking algorithm to improve accuracy of classification in lung cancer imaging and radiology. Eye-tracking enhancements able to improve accuracy of classification by 3-5%.
+
 * [**Curriculum ViTeX**](https://github.com/muhammadkhan/Curriculum-ViTeX): This
 is a template engine I wrote for resumes/CVs written in LaTeX using XML.
 
