--- a/_posts/2000-01-01-intro.md
+++ b/_posts/2000-01-01-intro.md
@@ -10,10 +10,10 @@ color: black
 
 <div class="mhkphoto" style="height:30%"><img src="../img/hardlyworking.png" /></div>
 
-I am an incoming Ph. D. student at [Yale University](http://www.yale.edu) in biomedical engineering
+I am a second-year Ph. D. student at [Yale University](http://www.yale.edu) in biomedical engineering
 with quite an eclectic variety of interests. My passions for computational
 modeling, physics, and quantitative approaches to the life sciences have made
-me explore the areas of biomedical imaging, with which my Ph. D. thesis will
-most likely be concerned. I'm also a music enthusiast and really good at
-memorizing song lyrics so you'll most likely find me walking and singing
-something from the Top 40 / Billboard Hot 100 more often than not.
+me explore the areas of biomedical imaging. Fittingly, my Ph. D. thesis will
+be centered around the molecular imaging of cancer. I'm also a music enthusiast
+and really good at memorizing song lyrics so you'll most likely find me walking
+and singing something from the Top 40 / Billboard Hot 100 more often than not.
