--- a/_posts/2000-01-02-aboutme.md
+++ b/_posts/2000-01-02-aboutme.md
@@ -19,10 +19,13 @@ Goldman Sachs and multiple research labs, the most notable of which was my work 
 the [Adie Lab](http://adie.research.engineering.cornell.edu) in dynamic real-time
 GPU-accelerated optical coherence elastography.
 
-I am about to embark upon a
-Ph. D. also in biomedical engineering starting August 2016 at [Yale University](http://www.yale.edu),
-with a potential project involving computational biomedical imaging/medical
-physics.
+I am presently pursuing my
+Ph. D.in biomedical engineering at [Yale University](http://www.yale.edu), and
+in my second year. I am a member of the [Hyder Lab](http://seas.yale.edu/faculty-research/faculty-directory/ds-fahmeed-hyder)
+where my project falls under the umbrella term "molecular imaging of cancer."
+More accurately, I am using Biosensor Imaging of Redundant Deviations in Shifts
+(BIRDS), a technique in magnetic resonance spectroscopy, to ascertain a mapping
+between neural physiology and sodium-23 chemical shift.
 
 I like to, however, have personal interests that span a variety of fields. If
 I had it my way, I would be able to study all of my interests at the same time. In
