--- a/_posts/2000-01-01-intro.md
+++ b/_posts/2000-01-01-intro.md
@@ -10,7 +10,7 @@ color: black
 
 <div class="mhkphoto" style="height:30%"><img src="../img/hardlyworking.png" /></div>
 
-I am a second-year Ph. D. student at [Yale University](http://www.yale.edu) in biomedical engineering
+I am a third-year Ph. D. student at [Yale University](http://www.yale.edu) in biomedical engineering
 with quite an eclectic variety of interests. My passions for computational
 modeling, physics, and quantitative approaches to the life sciences have made
 me explore the areas of biomedical imaging. Fittingly, my Ph. D. thesis will
