--- a/_posts/2000-01-02-aboutme.md
+++ b/_posts/2000-01-02-aboutme.md
@@ -21,11 +21,11 @@ GPU-accelerated optical coherence elastography.
 
 I am presently pursuing my
 Ph. D.in biomedical engineering at [Yale University](http://www.yale.edu), and
-in my second year. I am a member of the [Hyder Lab](http://seas.yale.edu/faculty-research/faculty-directory/ds-fahmeed-hyder)
+in my third year. I am a member of the [Hyder Lab](http://seas.yale.edu/faculty-research/faculty-directory/ds-fahmeed-hyder)
 where my project falls under the umbrella term "molecular imaging of cancer."
 More accurately, I am using Biosensor Imaging of Redundant Deviations in Shifts
 (BIRDS), a technique in magnetic resonance spectroscopy, to ascertain a mapping
-between neural physiology and sodium-23 chemical shift.
+between neural physiology and the chemical shift of the nucleus sodium-23.
 
 I like to, however, have personal interests that span a variety of fields. If
 I had it my way, I would be able to study all of my interests at the same time. In
@@ -59,6 +59,7 @@ me about:
   - Genomics and Computational Biology
   - Biochemistry
   - Stem Cell Engineering
+  - Bioimaging (MRI, PET, CT, Optical, etc.)
 * Computer Science
   - Multi-Paradigm Programming
   - Programming Language Theory (Type Theory)
