updates to intro and aboutme 3/19

--- a/_posts/2000-01-01-intro.md
+++ b/_posts/2000-01-01-intro.md
@@ -13,7 +13,11 @@ color: black
 I am a third-year Ph. D. student at [Yale University](http://www.yale.edu) in biomedical engineering
 with quite an eclectic variety of interests. My passions for computational
 modeling, physics, and quantitative approaches to the life sciences have made
-me explore the areas of biomedical imaging. Fittingly, my Ph. D. thesis will
-be centered around the molecular imaging of cancer. I'm also a music enthusiast
+me explore the areas of biomedical imaging. Fittingly, my Ph. D. thesis is
+centered around the molecular imaging of cancer. More specifically, I am
+designing novel magnetic-resonance-based approaches to probing
+bioelectrical activity to aid in the diagnosis of brain cancer.
+
+I'm also a music enthusiast
 and really good at memorizing song lyrics so you'll most likely find me walking
 and singing something from the Top 40 / Billboard Hot 100 more often than not.
