--- a/_posts/2000-01-02-aboutme.md
+++ b/_posts/2000-01-02-aboutme.md
@@ -23,9 +23,10 @@ I am presently pursuing my
 Ph. D.in biomedical engineering at [Yale University](http://www.yale.edu), and
 in my third year. I am a member of the [Hyder Lab](http://seas.yale.edu/faculty-research/faculty-directory/ds-fahmeed-hyder)
 where my project falls under the umbrella term "molecular imaging of cancer."
-More accurately, I am using Biosensor Imaging of Redundant Deviations in Shifts
-(BIRDS), a technique in magnetic resonance spectroscopy, to ascertain a mapping
-between neural physiology and the chemical shift of the nucleus sodium-23.
+More accurately, I am using agents employed in other spectroscopic methods, such as
+Biosensor Imaging of Redundant Deviations in Shifts (BIRDS), to ascertain a mapping
+between neural physiology and the chemical shift of the nucleus sodium-23, and
+relating oncogenic changes in physiology to changes in chemical shift and vice versa.
 
 I like to, however, have personal interests that span a variety of fields. If
 I had it my way, I would be able to study all of my interests at the same time. In
@@ -65,7 +66,7 @@ me about:
   - Programming Language Theory (Type Theory)
   - (Typed) Lambda Calculus
   - Algorithm Design and Analysis
-  
+
 ..and the list goes on. If you know something about any of those, or something
 else entirely, feel free to reach out.
 {% endcomment %}
